<resources>
    <string name="app_name">MASSMESS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_status">В сети</string>
    <string name="settings_default_username">Maxim Subbotkin</string>
    <string name="settings_text_account">Аккаунт</string>
    <string name="settings_default_number">+79913955145</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_default_login">Incursio</string>
    <string name="settings_label_login">Имя пользователя</string>
    <string name="settings_bio">О себе</string>
    <string name="settings_label_bio">Напишите о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="cd_enter_code_img">enter_code_img</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_weSend">Мы отправили СМС с кодом проверки на ваш телефон</string>
    <string name="cd_register_enter_phone_btn_next">register_enter_phone_btn_next</string>
    <string name="settings_hint_input_name">Имя</string>
    <string name="settings_hint_input_surname">Фамилия</string>
    <string name="settings_hint_input_username">Имя пользователя</string>
    <string name="settings_hint_input_bio">О себе</string>
    <string name="clear_chat">Очистить чат</string>
    <string name="delete_chat">Удалить чат</string>

    <plurals name="members_count">
        <item quantity="one">%d участник</item>
        <item quantity="few">%d участника</item>
        <item quantity="other">%d участников</item>
        <item quantity="many">%d участников</item>
    </plurals>
</resources>